<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/calcul_des_impots_locaux" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nom"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="36dp" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/adressTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/adress" />

    <EditText
        android:id="@+id/adressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/surfaceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/surface" />

    <EditText
        android:id="@+id/surfaceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/nbrPiecesTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/nombre_de_pi_ces" />

    <EditText
        android:id="@+id/nbrPiecesET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
    <CheckBox
        android:id="@+id/piscineCB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/piscine" />

        <Button
            android:id="@+id/calculBn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:baselineAligned="false"
            android:text="@string/calcul" />
    </LinearLayout>

    <TextView
        android:id="@+id/baseTV"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/suppTV"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
</LinearLayout>